--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Gamma Nu - Kappa Kappa Psi</title>
+  <title>Contact - Gamma Nu</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
   <script src="https://kit.fontawesome.com/a2b99cde4b.js" crossorigin="anonymous"></script>
@@ -19,21 +19,14 @@
     </ul>
   </nav>
 
-  <section class="hero">
-    <h2>Gamma Nu Chapter</h2>
-    <p>Of Kappa Kappa Psi at Florida State University</p>
-    <a class="button" href="contact.html">Get in Touch</a>
-  </section>
-
   <section class="section">
-    <h2>Welcome</h2>
-    <p>
-      We are the Gamma Nu Chapter of Kappa Kappa Psi, a national honorary fraternity for college band members. Explore our site to learn more about our mission, upcoming events, and how to get involved.
-    </p>
+    <h2>Contact Us</h2>
+    <p><i class="fas fa-envelope"></i> <a href="mailto:gammanu@kkpsi.org">gammanu@kkpsi.org</a></p>
+    <p><i class="fab fa-instagram"></i> <a href="https://instagram.com/fsukksi">@fsukksi</a></p>
   </section>
 
   <footer>
-    <p>&copy; 2025 Gamma Nu Chapter of Kappa Kappa Psi | All Rights Reserved</p>
+    <p>&copy; 2025 Gamma Nu Chapter of Kappa Kappa Psi</p>
   </footer>
 </body>
 </html>
