--- a/mission.html
+++ b/mission.html
@@ -3,10 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Gamma Nu - Kappa Kappa Psi</title>
+  <title>Mission - Gamma Nu</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
-  <script src="https://kit.fontawesome.com/a2b99cde4b.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <nav class="navbar">
@@ -19,21 +18,15 @@
     </ul>
   </nav>
 
-  <section class="hero">
-    <h2>Gamma Nu Chapter</h2>
-    <p>Of Kappa Kappa Psi at Florida State University</p>
-    <a class="button" href="contact.html">Get in Touch</a>
-  </section>
-
   <section class="section">
-    <h2>Welcome</h2>
+    <h2>Our Mission</h2>
     <p>
-      We are the Gamma Nu Chapter of Kappa Kappa Psi, a national honorary fraternity for college band members. Explore our site to learn more about our mission, upcoming events, and how to get involved.
+      Kappa Kappa Psi is a national honorary band fraternity dedicated to serving college and university bands. The Gamma Nu Chapter at Florida State University promotes musicianship, leadership, and service through brotherhood and support of the university band programs.
     </p>
   </section>
 
   <footer>
-    <p>&copy; 2025 Gamma Nu Chapter of Kappa Kappa Psi | All Rights Reserved</p>
+    <p>&copy; 2025 Gamma Nu Chapter of Kappa Kappa Psi</p>
   </footer>
 </body>
 </html>
