--- a/index.html
+++ b/index.html
@@ -4,32 +4,53 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Gamma Nu - Kappa Kappa Psi</title>
-  <link rel="stylesheet" href="style.css" />
+
+  <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+
+  <!-- Font Awesome (optional icons) -->
   <script src="https://kit.fontawesome.com/a2b99cde4b.js" crossorigin="anonymous"></script>
+
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <nav class="navbar">
-    <div class="logo">Gamma Nu</div>
-    <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="mission.html">Mission</a></li>
-      <li><a href="events.html">Events</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
+  <header>
+    <nav class="navbar">
+      <div class="logo">Gamma Nu</div>
+      <ul class="nav-links">
+        <li><a href="#mission">Mission</a></li>
+        <li><a href="#events">Events</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
   <section class="hero">
     <h2>Gamma Nu Chapter</h2>
     <p>Of Kappa Kappa Psi at Florida State University</p>
-    <a class="button" href="contact.html">Get in Touch</a>
+    <a class="button" href="#contact">Get in Touch</a>
   </section>
 
-  <section class="section">
-    <h2>Welcome</h2>
+  <section id="mission" class="section">
+    <h2>Our Mission</h2>
     <p>
-      We are the Gamma Nu Chapter of Kappa Kappa Psi, a national honorary fraternity for college band members. Explore our site to learn more about our mission, upcoming events, and how to get involved.
+      Kappa Kappa Psi is a national honorary band fraternity dedicated to serving college and university bands. The Gamma Nu Chapter at FSU continues this legacy by promoting musicianship, leadership, and service through meaningful action and brotherhood.
     </p>
+  </section>
+
+  <section id="events" class="section">
+    <h2>Upcoming Events</h2>
+    <ul>
+      <li>🎶 Fall Recruitment Week – August 25–30</li>
+      <li>🎺 Service Day – September 10</li>
+      <li>🎉 Brotherhood Retreat – October 7</li>
+    </ul>
+  </section>
+
+  <section id="contact" class="section">
+    <h2>Contact Us</h2>
+    <p><i class="fas fa-envelope"></i> <a href="mailto:gammanu@kkpsi.org">gammanu@kkpsi.org</a></p>
+    <p><i class="fab fa-instagram"></i> <a href="https://instagram.com/fsukksi">@fsukksi</a></p>
   </section>
 
   <footer>
