--- a/index.html
+++ b/index.html
@@ -3,14 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Gamma Nu - Kappa Kappa Psi</title>
+  <title>Gamma Nu – Kappa Kappa Psi</title>
 
-  <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
-
-  <!-- Font Awesome (optional icons) -->
-  <script src="https://kit.fontawesome.com/a2b99cde4b.js" crossorigin="anonymous"></script>
-
+  <!-- Web Font Replacements -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -26,15 +22,18 @@
   </header>
 
   <section class="hero">
-    <h2>Gamma Nu Chapter</h2>
+    <!-- Placeholder for crest image -->
+    <div class="crest-placeholder">[ Crest Placeholder ]</div>
+    <h1>Gamma Nu Chapter</h1>
     <p>Of Kappa Kappa Psi at Florida State University</p>
+    <p class="tagline">Musicianship. Leadership. Service.</p>
     <a class="button" href="#contact">Get in Touch</a>
   </section>
 
   <section id="mission" class="section">
     <h2>Our Mission</h2>
     <p>
-      Kappa Kappa Psi is a national honorary band fraternity dedicated to serving college and university bands. The Gamma Nu Chapter at FSU continues this legacy by promoting musicianship, leadership, and service through meaningful action and brotherhood.
+      Kappa Kappa Psi is a national honorary band fraternity dedicated to serving college and university bands. The Gamma Nu Chapter at FSU promotes excellence in music, develops strong leadership, and upholds service to our band program and community.
     </p>
   </section>
 
@@ -49,12 +48,13 @@
 
   <section id="contact" class="section">
     <h2>Contact Us</h2>
-    <p><i class="fas fa-envelope"></i> <a href="mailto:gammanu@kkpsi.org">gammanu@kkpsi.org</a></p>
-    <p><i class="fab fa-instagram"></i> <a href="https://instagram.com/fsukksi">@fsukksi</a></p>
+    <p>Email: <a href="mailto:gammanu@kkpsi.org">gammanu@kkpsi.org</a></p>
+    <p>Instagram: <a href="https://instagram.com/fsukksi">@fsukksi</a></p>
   </section>
 
   <footer>
-    <p>&copy; 2025 Gamma Nu Chapter of Kappa Kappa Psi | All Rights Reserved</p>
+    <p>&copy; 2025 Gamma Nu Chapter of Kappa Kappa Psi</p>
+    <p class="tagline">Musicianship. Leadership. Service.</p>
   </footer>
 </body>
 </html>
