--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
   <title>Gamma Nu – Kappa Kappa Psi</title>
 
   <!-- Web Font Replacements -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <nav class="navbar">
-      <div class="logo">Gamma Nu</div>
+      <div class="logo">
+      <img src="images/OUTLINE.png" alt="KKPSi Logo" class="logo-img" />
+      <span>Gamma Nu</span>
+      </div>
+
       <ul class="nav-links">
         <li><a href="#mission">Mission</a></li>
         <li><a href="#events">Events</a></li>
@@ -22,13 +26,13 @@
   </header>
 
   <section class="hero">
-    <!-- Placeholder for crest image -->
-    <div class="crest-placeholder">[ Crest Placeholder ]</div>
+    <!-- <img class="crest" src="images/psi-logo-type-01.png" alt="Kappa Kappa Psi Crest" /> -->
     <h1>Gamma Nu Chapter</h1>
     <p>Of Kappa Kappa Psi at Florida State University</p>
-    <p class="tagline">Musicianship. Leadership. Service.</p>
+    <p class="tagline">Musicianship. Leadership. Service. Brotherhood.</p>
     <a class="button" href="#contact">Get in Touch</a>
   </section>
+
 
   <section id="mission" class="section">
     <h2>Our Mission</h2>
