--- a/index.html
+++ b/index.html
@@ -44,9 +44,8 @@
   <section id="events" class="section">
     <h2>Upcoming Events</h2>
     <ul>
-      <li>🎶 Fall Recruitment Week – August 25–30</li>
-      <li>🎺 Service Day – September 10</li>
-      <li>🎉 Brotherhood Retreat – October 7</li>
+      <li> Fall Recruitment Week – Date</li>
+      <li> 5k – Date</li>
     </ul>
   </section>
 
