--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <section id="contact" class="section">
     <h2>Contact Us</h2>
     <p>Email: <a href="mailto:gammanu@kkpsi.org">gammanu@kkpsi.org</a></p>
-    <p>Instagram: <a href="https://instagram.com/fsukksi">@fsukksi</a></p>
+    <p>Instagram: <a href="https://instagram.com/gammanu">@gammanu</a></p>
   </section>
 
   <footer>
