--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
   <footer>
     <p>&copy; 2025 Gamma Nu Chapter of Kappa Kappa Psi</p>
-    <p class="tagline">Musicianship. Leadership. Service.</p>
+    <p class="tagline">Musicianship. Leadership. Service. Brotherhood. </p>
   </footer>
 </body>
 </html>
